--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "prepare": "husky",
     "lint": "lint-staged"
-  }, 
+  },
   "lint-staged": {
     "*.ts": "eslint --fix"
   },
@@ -31,7 +31,10 @@
     "@angular-devkit/build-angular": "^19.0.5",
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.0",
+    "@eslint/js": "^9.17.0",
     "@types/jasmine": "~5.1.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
@@ -40,6 +43,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.2.11",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.18.1"
   }
 }
