--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@components/*": ["src/components/*"],
       "@views/*": ["src/views/*"],
       "@models/*": ["src/models/*"],
-      "@services/*": ["src/services/*"]
+      "@services/*": ["src/services/*"],
+      "@layouts/*": ["src/layouts/*"]
     }
   },
   "angularCompilerOptions": {
