--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets/images"
+              "src/assets/images",
+              "src/assets/icons"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
