--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "firebase": "^11.2.0",
     "lightgallery": "^2.8.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
