--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^11.2.0",
     "lightgallery": "^2.8.2",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
