--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "^19.1.3",
     "@angular/compiler": "^19.1.3",
     "@angular/core": "^19.1.3",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.1.3",
     "@angular/material": "^19.0.3",
     "@angular/platform-browser": "^19.1.3",
