--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
     "firebase": "^11.2.0",
+    "lenis": "^1.1.20",
     "photoswipe": "^5.4.4",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.1",
